# MDView

./: .gitignore  Cargo.toml  README.md  build.ps1  build.rs  pluginst.inf
.github/workflows/: release.yml
assets/: mdview.manifest
assets/manual-test/: file with spaces.md  links-test.md  second.md
assets/manual-test/nested/: third.md
src/: dark_menu.rs  lib.rs  main.rs  markdown.rs  terminal.rs  viewer.rs
