[package]
name = "mdview"
version = "0.2.4"
edition = "2024"
description = "Markdown viewer - Total Commander Lister plugin and standalone viewer"
license = "MPL-2.0"
authors = ["Remko Weijnen"]

[lib]
name = "mdview_wlx"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "mdview"
path = "src/main.rs"

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_Security",
] }
webview2-com = "0.38"
once_cell = "1.20"
widestring = "1.1"
atty = "0.2"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[features]
default = []
